--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta charset="UTF-8">
     <title>JavaScript Example</title>
     <script src="bundle.js"></script>
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
-<h1>Hello from HTML!</h1>
+
+<section>
+    <div class="container">
+    <div class="row d-flex nav-justified">
+        <div class="col-md-7">
+1
+        </div>
+        <div class="col-md-4">
+2
+        </div>
+        <div class="col-md-4">
+3
+        </div>
+    </div>
+    <h1>Hello from HTML!</h1>
+    </div>
+</section>
 </body>
 </html>
