--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 
 <section>
     <div class="container">
-    <div class="row d-flex nav-justified">
-        <div class="col-md-7">
-1
-        </div>
-        <div class="col-md-4">
-2
-        </div>
-        <div class="col-md-4">
-3
-        </div>
-    </div>
+<nav>
+    <ul class="menu justify-content">
+        <li class="menu_menu-1">
+            <a href="#">11111wq</a>
+        </li>
+        <li class="menu_menu-2">
+            <a href="#">22222def2</a>
+        </li>
+        <li class="menu_menu-3">
+            <a href="#">333333ssd3333</a>
+        </li>
+    </ul>
+
+</nav>
+
     <h1>Hello from HTML!</h1>
     </div>
 </section>
